JumpScript/tests/baselines/reference/classOverloadForFunction.errors.txt
tests/cases/compiler/classOverloadForFunction.jump(1,7): error TS2300: Duplicate identifier 'foo'.
tests/cases/compiler/classOverloadForFunction.jump(2,10): error TS2300: Duplicate identifier 'foo'.


==== tests/cases/compiler/classOverloadForFunction.jump (2 errors) ====
    class foo { };
          ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    function foo() {}
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    